add shortining url apis and docs
