# src/components/healthcheck/healthCheck.router.ts
@@ -2,6 +2,6 @@ import { Router } from 'express';
 import healthcheck from './healthCheck.controller';
 
 const router: Router = Router();
-router.get('/health', healthcheck);
-
+// we define this route to be used by cloud providers like GCP to check if the service is up
+router.get('/', healthcheck);
 export default router;
