# src/core/interfaces/response.interface.ts
@@ -1,0 +1,8 @@
+
+export interface IResponse {
+    message: string;
+    data: {
+        shortUrl?: string;
+        originalUrl?: string;
+    }
+}
